--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import graph_tool_extras as gte"
+    "import graph_tool_extras as gte\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -30,7 +31,9 @@
    "cell_type": "markdown",
    "id": "c7e50b3d-36ef-431a-8283-2ae1c9f8d131",
    "metadata": {},
-   "source": []
+   "source": [
+    "In this notebook, a network of co-authorship of papers about condensed matter authors was built. The database in the file below is used. It's from the Stanford Network Analysis Project's dataset at https://networks.skewed.de/net/arxiv_authors#CondMat_draw."
+   ]
   },
   {
    "cell_type": "code",
@@ -39,7 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = ''"
+    "FOLDER_PATH = Path.cwd() / 'CondMat.csv'\n",
+    "EDGE_FILE_PATH = FOLDER_PATH / 'edges.csv'\n",
+    "NODES_FILE_PATH = FOLDER_PATH / 'nodes.csv'"
    ]
   },
   {
@@ -144,12 +149,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH) as file:\n",
+    "with open(NODES_FILE_PATH) as file:\n",
     "\n",
     "    next(file)\n",
     "\n",
     "    for line in file:\n",
-    "        parts = line.split('')\n",
+    "        parts = line.split(',')\n",
+    "\n",
+    "        parts = [part[1:-1] for part in parts]\n",
+    "        ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51386696-159a-4ca9-a8f1-faf5798c597d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(EDGES_FILE_PATH) as file:\n",
+    "\n",
+    "    next(file)\n",
+    "    for line in file:\n",
+    "        parts = line.split(',')\n",
     "\n",
     "        parts = [part[1:-1] for part in parts]\n",
     "        ..."
