--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -10,9 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5a2685ca-0a75-4866-a8e6-e30ae77bdb37",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-14T13:58:54.066561Z",
+     "iopub.status.busy": "2023-09-14T13:58:54.064822Z",
+     "iopub.status.idle": "2023-09-14T13:58:54.071906Z",
+     "shell.execute_reply": "2023-09-14T13:58:54.070772Z",
+     "shell.execute_reply.started": "2023-09-14T13:58:54.066502Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import graph_tool_extras as gte\n",
@@ -37,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7eb99007-ccd3-4fa6-9729-9f739c695cc1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-14T13:58:55.286301Z",
+     "iopub.status.busy": "2023-09-14T13:58:55.285041Z",
+     "iopub.status.idle": "2023-09-14T13:58:55.292771Z",
+     "shell.execute_reply": "2023-09-14T13:58:55.291372Z",
+     "shell.execute_reply.started": "2023-09-14T13:58:55.286246Z"
+    }
+   },
    "outputs": [],
    "source": [
     "FOLDER_PATH = Path.cwd() / 'CondMat.csv'\n",
@@ -60,17 +76,17 @@
    "id": "eb52fa9c-0aad-4f22-9755-0750e32b91aa",
    "metadata": {},
    "source": [
-    "Concept of vertices:\r\n",
-    "Authors\r\n",
-    "\r\n",
-    "Concept of edges:\r\n",
-    "An edge between i and j indicates co-authorship between i and j.\r\n",
-    "\r\n",
-    "Operationalization of vertices:\r\n",
-    "\r\n",
-    "Each vertex represents an author of a paper in the cond-mat category (an area that studies condensed matter) on the arXiv platform. The data was collected from January 1993 to April 2003.\r\n",
-    "\r\n",
-    "Operationalization of edges:\r\n",
+    "Concept of vertices:\n",
+    "Authors\n",
+    "\n",
+    "Concept of edges:\n",
+    "An edge between i and j indicates co-authorship between i and j.\n",
+    "\n",
+    "Operationalization of vertices:\n",
+    "\n",
+    "Each vertex represents an author of a paper in the cond-mat category (an area that studies condensed matter) on the arXiv platform. The data was collected from January 1993 to April 2003.\n",
+    "\n",
+    "Operationalization of edges:\n",
     "An edge between authors i and j indicates a co-authorship relationship between them. In cases where other k authors also contributed to the production of the paper, these additional k authors are connected to both authors i and j, as well as to each other, through edges."
    ]
   },
@@ -84,9 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e8548565-eb98-4d8e-b88c-5606b90d0a48",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-14T13:59:06.463414Z",
+     "iopub.status.busy": "2023-09-14T13:59:06.462867Z",
+     "iopub.status.idle": "2023-09-14T13:59:06.471142Z",
+     "shell.execute_reply": "2023-09-14T13:59:06.469648Z",
+     "shell.execute_reply.started": "2023-09-14T13:59:06.463372Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_or_add_vertex(g, id):\n",
@@ -99,9 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2b7c4621-fd32-40db-8972-6a65bbd64fe6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-14T13:59:06.920019Z",
+     "iopub.status.busy": "2023-09-14T13:59:06.919509Z",
+     "iopub.status.idle": "2023-09-14T13:59:06.928372Z",
+     "shell.execute_reply": "2023-09-14T13:59:06.926827Z",
+     "shell.execute_reply.started": "2023-09-14T13:59:06.919980Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_or_add_edge(g, gene_a, gene_b, master_net_id):\n",
@@ -122,20 +154,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0f1dc392-21ed-4adb-8d27-49ab0526512a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-14T13:59:08.931672Z",
+     "iopub.status.busy": "2023-09-14T13:59:08.931383Z",
+     "iopub.status.idle": "2023-09-14T13:59:08.935485Z",
+     "shell.execute_reply": "2023-09-14T13:59:08.934793Z",
+     "shell.execute_reply.started": "2023-09-14T13:59:08.931654Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "g = gte.Graph(directed=)"
+    "g = gte.Graph(directed=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "458df791-21da-492b-a578-3d97bf9ea867",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-14T13:56:30.600764Z",
+     "iopub.status.busy": "2023-09-14T13:56:30.600221Z",
+     "iopub.status.idle": "2023-09-14T13:56:30.651996Z",
+     "shell.execute_reply": "2023-09-14T13:56:30.649888Z",
+     "shell.execute_reply.started": "2023-09-14T13:56:30.600724Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Graph' object has no attribute 'add_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m g\u001b[38;5;241m.\u001b[39madd_ep(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m g\u001b[38;5;241m.\u001b[39madd_vp(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Graph' object has no attribute 'add_'"
+     ]
+    }
+   ],
    "source": [
     "g.add_ep('')\n",
     "g.add_vp('')\n",
@@ -144,10 +204,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d8604c6b-385a-4385-ac5b-05581d700896",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-14T13:59:13.499695Z",
+     "iopub.status.busy": "2023-09-14T13:59:13.499172Z",
+     "iopub.status.idle": "2023-09-14T13:59:13.523480Z",
+     "shell.execute_reply": "2023-09-14T13:59:13.522250Z",
+     "shell.execute_reply.started": "2023-09-14T13:59:13.499656Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'CondMat.csv/nodes.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mNODES_FILE_PATH\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mnext\u001b[39m(file)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m file:\n",
+      "File \u001b[0;32m/usr/local/lib/python3.11/site-packages/IPython/core/interactiveshell.py:286\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    280\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    281\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    283\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    284\u001b[0m     )\n\u001b[0;32m--> 286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'CondMat.csv/nodes.csv'"
+     ]
+    }
+   ],
    "source": [
     "with open(NODES_FILE_PATH) as file:\n",
     "\n",
@@ -157,7 +238,8 @@
     "        parts = line.split(',')\n",
     "\n",
     "        parts = [part[1:-1] for part in parts]\n",
-    "        ..."
+    "        print(parts)\n",
+    "        break"
    ]
   },
   {
