--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -45,15 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "7eb99007-ccd3-4fa6-9729-9f739c695cc1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T13:58:55.286301Z",
-     "iopub.status.busy": "2023-09-14T13:58:55.285041Z",
-     "iopub.status.idle": "2023-09-14T13:58:55.292771Z",
-     "shell.execute_reply": "2023-09-14T13:58:55.291372Z",
-     "shell.execute_reply.started": "2023-09-14T13:58:55.286246Z"
+     "iopub.execute_input": "2023-09-14T14:01:34.435159Z",
+     "iopub.status.busy": "2023-09-14T14:01:34.434905Z",
+     "iopub.status.idle": "2023-09-14T14:01:34.438320Z",
+     "shell.execute_reply": "2023-09-14T14:01:34.437835Z",
+     "shell.execute_reply.started": "2023-09-14T14:01:34.435118Z"
     }
    },
    "outputs": [],
@@ -76,18 +76,28 @@
    "id": "eb52fa9c-0aad-4f22-9755-0750e32b91aa",
    "metadata": {},
    "source": [
-    "Concept of vertices:\n",
+    "### Concept of vertices:\n",
     "Authors\n",
     "\n",
-    "Concept of edges:\n",
+    "### Concept of edges:\n",
     "An edge between i and j indicates co-authorship between i and j.\n",
     "\n",
-    "Operationalization of vertices:\n",
+    "### Operationalization of vertices:\n",
     "\n",
     "Each vertex represents an author of a paper in the cond-mat category (an area that studies condensed matter) on the arXiv platform. The data was collected from January 1993 to April 2003.\n",
     "\n",
-    "Operationalization of edges:\n",
+    "### Operationalization of edges:\n",
     "An edge between authors i and j indicates a co-authorship relationship between them. In cases where other k authors also contributed to the production of the paper, these additional k authors are connected to both authors i and j, as well as to each other, through edges."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85703717-95e7-4b8e-90a0-7fb20bda5902",
+   "metadata": {},
+   "source": [
+    "|                                     | Concept of vertices                                                                                                 | Concept of edges                                                                                                                             | Operationalization of vertices                                                                                                                                                                                                                                                           | Operationalization of edges                                                                                                                                                                                                                                                  |\n",
+    "|-------------------------------------|---------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| **1.**                              | Authors                                                                                                             | An edge between i and j indicates co-authorship between i and j.                                                                           | Each vertex represents an author of a paper in the cond-mat category on the arXiv platform. The data was collected from January 1993 to April 2003.                                                                                                                                 | An edge between authors i and j indicates a co-authorship relationship between them. In cases where other k authors also contributed to the production of the paper, these additional k authors are connected to both authors i and j, as well as to each other, through edges. |\n"
    ]
   },
   {
@@ -100,15 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "e8548565-eb98-4d8e-b88c-5606b90d0a48",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T13:59:06.463414Z",
-     "iopub.status.busy": "2023-09-14T13:59:06.462867Z",
-     "iopub.status.idle": "2023-09-14T13:59:06.471142Z",
-     "shell.execute_reply": "2023-09-14T13:59:06.469648Z",
-     "shell.execute_reply.started": "2023-09-14T13:59:06.463372Z"
+     "iopub.execute_input": "2023-09-14T14:01:35.069856Z",
+     "iopub.status.busy": "2023-09-14T14:01:35.069504Z",
+     "iopub.status.idle": "2023-09-14T14:01:35.075082Z",
+     "shell.execute_reply": "2023-09-14T14:01:35.074072Z",
+     "shell.execute_reply.started": "2023-09-14T14:01:35.069829Z"
     }
    },
    "outputs": [],
@@ -123,15 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "2b7c4621-fd32-40db-8972-6a65bbd64fe6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T13:59:06.920019Z",
-     "iopub.status.busy": "2023-09-14T13:59:06.919509Z",
-     "iopub.status.idle": "2023-09-14T13:59:06.928372Z",
-     "shell.execute_reply": "2023-09-14T13:59:06.926827Z",
-     "shell.execute_reply.started": "2023-09-14T13:59:06.919980Z"
+     "iopub.execute_input": "2023-09-14T14:01:35.982877Z",
+     "iopub.status.busy": "2023-09-14T14:01:35.982307Z",
+     "iopub.status.idle": "2023-09-14T14:01:35.990136Z",
+     "shell.execute_reply": "2023-09-14T14:01:35.988851Z",
+     "shell.execute_reply.started": "2023-09-14T14:01:35.982835Z"
     }
    },
    "outputs": [],
@@ -154,15 +164,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "0f1dc392-21ed-4adb-8d27-49ab0526512a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T13:59:08.931672Z",
-     "iopub.status.busy": "2023-09-14T13:59:08.931383Z",
-     "iopub.status.idle": "2023-09-14T13:59:08.935485Z",
-     "shell.execute_reply": "2023-09-14T13:59:08.934793Z",
-     "shell.execute_reply.started": "2023-09-14T13:59:08.931654Z"
+     "iopub.execute_input": "2023-09-14T14:01:37.164567Z",
+     "iopub.status.busy": "2023-09-14T14:01:37.164009Z",
+     "iopub.status.idle": "2023-09-14T14:01:37.172904Z",
+     "shell.execute_reply": "2023-09-14T14:01:37.171167Z",
+     "shell.execute_reply.started": "2023-09-14T14:01:37.164526Z"
     }
    },
    "outputs": [],
@@ -204,31 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "d8604c6b-385a-4385-ac5b-05581d700896",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T13:59:13.499695Z",
-     "iopub.status.busy": "2023-09-14T13:59:13.499172Z",
-     "iopub.status.idle": "2023-09-14T13:59:13.523480Z",
-     "shell.execute_reply": "2023-09-14T13:59:13.522250Z",
-     "shell.execute_reply.started": "2023-09-14T13:59:13.499656Z"
+     "iopub.execute_input": "2023-09-14T14:02:13.928893Z",
+     "iopub.status.busy": "2023-09-14T14:02:13.928493Z",
+     "iopub.status.idle": "2023-09-14T14:02:14.062606Z",
+     "shell.execute_reply": "2023-09-14T14:02:14.062008Z",
+     "shell.execute_reply.started": "2023-09-14T14:02:13.928863Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'CondMat.csv/nodes.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mNODES_FILE_PATH\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mnext\u001b[39m(file)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m file:\n",
-      "File \u001b[0;32m/usr/local/lib/python3.11/site-packages/IPython/core/interactiveshell.py:286\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    280\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    281\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    283\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    284\u001b[0m     )\n\u001b[0;32m--> 286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'CondMat.csv/nodes.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(NODES_FILE_PATH) as file:\n",
     "\n",
@@ -238,8 +235,7 @@
     "        parts = line.split(',')\n",
     "\n",
     "        parts = [part[1:-1] for part in parts]\n",
-    "        print(parts)\n",
-    "        break"
+    "        ..."
    ]
   },
   {
