Fixing file name

--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -5,7 +5,7 @@
    "id": "7356e2d7-6504-485a-af60-93126f4ba239",
    "metadata": {},
    "source": [
-    "# Building and analysing a XXX network"
+    "# Building and analysing a paper co-authorship network"
    ]
   },
   {
@@ -401,15 +401,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "d26f15c6-d02e-4fa4-85a0-1a58033900b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:34:39.549785Z",
-     "iopub.status.busy": "2023-09-14T14:34:39.549317Z",
-     "iopub.status.idle": "2023-09-14T14:34:39.553720Z",
-     "shell.execute_reply": "2023-09-14T14:34:39.553023Z",
-     "shell.execute_reply.started": "2023-09-14T14:34:39.549767Z"
+     "iopub.execute_input": "2023-09-14T14:37:12.694523Z",
+     "iopub.status.busy": "2023-09-14T14:37:12.694239Z",
+     "iopub.status.idle": "2023-09-14T14:37:12.698846Z",
+     "shell.execute_reply": "2023-09-14T14:37:12.698245Z",
+     "shell.execute_reply.started": "2023-09-14T14:37:12.694507Z"
     }
    },
    "outputs": [
@@ -417,8 +417,8 @@
      "data": {
       "text/html": [
        "\n",
-       "        <div id=\"5Y5FwyABPbEPVXRDK84Cpc\"></div>\n",
-       "        <script>netpixi.call('5Y5FwyABPbEPVXRDK84Cpc', 'Vf9nG6tfLjTe4RQPEd3KCT', 'changeGraph', 'eyJ0eXBlIjogInNldHRpbmdzIiwgInByb3BzIjogeyJlZGdlIjogeyJ3aWR0aCI6IDAuMiwgImNvbG9yIjogNzgyOTUwMywgImN1cnZlMSI6IDAsICJjdXJ2ZTIiOiAwfX19Cg==');</script>\n",
+       "        <div id=\"YRt2iGN7SeEfw59SZgWPFV\"></div>\n",
+       "        <script>netpixi.call('YRt2iGN7SeEfw59SZgWPFV', 'Vf9nG6tfLjTe4RQPEd3KCT', 'changeGraph', 'eyJ0eXBlIjogInNldHRpbmdzIiwgInByb3BzIjogeyJlZGdlIjogeyJ3aWR0aCI6IDAuMiwgImNvbG9yIjogMTY3NzcyMTUsICJjdXJ2ZTEiOiAwLCAiY3VydmUyIjogMH19fQo=');</script>\n",
        "    "
       ],
       "text/plain": [
@@ -432,7 +432,7 @@
    "source": [
     "r.edge_default(\n",
     "    width=0.2,\n",
-    "    color=0x7777ff,\n",
+    "    color=0xffffff,\n",
     "    curve1=0,\n",
     "    curve2=0,\n",
     ")"
