adding vertex operationalization

--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -71,18 +71,18 @@
    "id": "eb52fa9c-0aad-4f22-9755-0750e32b91aa",
    "metadata": {},
    "source": [
-    "Concept of vertices:\r\n",
-    "Authors\r\n",
+    "Concept of vertices:\r",
+    "Webpages.s\r\n",
     "\r\n",
     "Concept of edges:\r\n",
-    "An edge between i and j indicates co-authorship between i and j.\r\n",
+    "An edge bet i and j represent a redirection from webpage i to webpage j.d j.\r\n",
     "\r\n",
-    "Operationalization of vertices:\r\n",
+    "Operationalization of vertEach vertex represents a webpage.il 2003.\r\n",
     "\r\n",
-    "Each vertex represents an author of a paper in the cond-mat category (an area that studies condensed matter) on the arXiv platform. The data was collected from January 1993 to April 2003.\r\n",
-    "\r\n",
-    "Operationalization of edges:\r\n",
-    "An edge between authors i and j indicates a co-authorship relationship between them. In cases where other k authors also contributed to the production of the paper, these additional k authors are connected to both authors i and j, as well as to each other, through edges."
+    "Operationalization A directed edge from node i to node j represents a hyperlink from node i to node j.\n",
+    "\n",
+    "Description:\n",
+    " This dataset of webpages and redirections between them was released by Google was released by the company in the 2012 installment of the google programming contest.ough edges."
    ]
   },
   {
